--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./app.js" defer></script>
 </head>
 <body>
-    
+    <div class="tic-tac-toe-grid">
+    </div>
 </body>
 </html>
