Added message boxes for the winner and error

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
 <body>
     <div class="tic-tac-toe-grid">
     </div>
+    <div class="winner"></div>
+    <div class="errors"></div>
 </body>
 </html>
