Add restart and end buttons

--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
     </div>
     <div class="winner"></div>
     <div class="errors"></div>
+    <div class="game-buttons">
+        <button class="restart-btn">Restart Game</button>
+        <button class="end-btn">End Current Game</button>
+    </div>
 </body>
 </html>
