--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +10,11 @@
     <link rel="stylesheet" href="./css/styles.css">
     <script src="./app.js" defer></script>
 </head>
+
 <body>
+    <div class="players">
+    </div>
+    <div class="player-turn"></div>
     <div class="tic-tac-toe-grid">
     </div>
     <div class="winner"></div>
@@ -19,4 +24,5 @@
         <button class="end-btn">End Current Game</button>
     </div>
 </body>
+
 </html>
