--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <div class="players">
     </div>
     <div class="player-turn"></div>
+    <div class="game-over"></div>
+    
     <div class="tic-tac-toe-grid">
     </div>
     <div class="winner"></div>
