Apply basic styling

--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
 </head>
 
 <body>
-    <div class="players">
-    </div>
+    <h1 class="title">Tic-Tac-Toe</h1>
+    <div class="players"></div>
     <div class="player-turn"></div>
     <div class="game-over"></div>
-    
-    <div class="tic-tac-toe-grid">
-    </div>
+
+    <div class="tic-tac-toe-grid"></div>
     <div class="winner"></div>
     <div class="errors"></div>
     <div class="game-buttons">
