--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
 </head>
 
 <body>
-    <h1 class="title">Tic-Tac-Toe</h1>
-    <div class="players"></div>
-    <div class="player-turn"></div>
-    <div class="game-over"></div>
-
-    <div class="tic-tac-toe-grid"></div>
-    <div class="winner"></div>
-    <div class="game-buttons">
-        <button class="restart-btn">Restart Game</button>
+    <div class="container">
+        <h1 class="title">Tic-Tac-Toe</h1>
+        <div class="players"></div>
+        <div class="player-turn"></div>
+        <div class="game-over"></div>
+        <div class="tic-tac-toe-grid"></div>
+        <div class="winner"></div>
+        <div class="game-buttons">
+            <button class="restart-btn">Restart Game</button>
+        </div>
     </div>
 </body>
 
